# Some-api-testing

./: README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/core/: doc.py  settings.py  urls.py
backend/movies/: serializers.py  views.py
frontend/: package-lock.json  package.json
frontend/src/components/: CustomButton.vue
frontend/src/store/: index.js
frontend/src/views/: HomeView.vue
